# homecockpit

./: .gitignore  Cockpit compact.pptx  README.md
3d/: BOM.xlsx  Test_1.blend  (+7 more)
rust/: Cargo.toml  build.rs  wrapper.h
rust/SimConnect SDK/include/: SimConnect.h
rust/src/: channel_mgt.rs  cli.rs  main.rs  protocol.rs  serial.rs  simconnect.rs
rust/src/simconnect/: enumerations.rs  events.rs  lib.rs  mod.rs  structures.rs
rust/src/simconnect/events/: mod.rs
rust/src/simconnect/events/aircraft_miscellanous/: aircraft_failures.rs  cabin_pressurization.rs  landing_gear_and_brakes.rs  miscellanous_systems.rs  mod.rs  nosewheel_steering.rs  windshield_deice.rs
rust/src/simconnect/events/autopilot/: autopilot.rs  flight_assistance.rs  g1000.rs  mod.rs  virtual_copilot.rs
rust/src/simconnect/events/electricals/: alternator.rs  apu.rs  battery.rs  breakers.rs  lights.rs  miscellanous.rs  mod.rs
rust/src/simconnect/events/engine/: antiice.rs  fuel.rs  magneto.rs  miscellanous.rs  mod.rs  propeller.rs  starter.rs  throttle.rs  turbine.rs
rust/src/simconnect/events/flight_control/: ailerons.rs  elevators.rs  flaps.rs  miscellanous.rs  mod.rs  rudder.rs  slew.rs  spoilers.rs
rust/src/simconnect/events/fuel/: cross_feed.rs  fuel_selector.rs  fuel_system.rs  fuel_transfer.rs  miscellanous.rs  mod.rs
rust/src/simconnect/events/instrumentation/: aircraft_instruments.rs  atc.rs  egt.rs  mod.rs
rust/src/simconnect/events/miscellanous/: demo_replay.rs  freezing_position.rs  miscellanous.rs  mission_keys.rs  mod.rs  multiplayer.rs  sim_rate.rs  time_data.rs
(+78 files in other folders)
