[package]
name = "rust"
version = "0.1.0"
authors = ["leirn"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.60.1"

[dependencies]
serialport = "4.2.0"
regex = "1"
bindgen = "0.60.1"